Fix z-indexes on AlloyEditor

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -561,6 +561,7 @@ hr.assignModalSplit {
 .ae-ui .ae-button {
 	width: 20px !important;
 	height: 20px !important;
+	outline: none;
 }
 
 .ae-ui .ae-toolbar-add .ae-button-add .ae-icon-add {
@@ -568,6 +569,6 @@ hr.assignModalSplit {
 	line-height: 14px !important;
 }
 
-.ae-toolbar-styles {
-	z-index: 3 !important;
+.ae-toolbar, .ae-toolbar-styles {
+	z-index: 10 !important;
 }
